--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "test": "node --test tests/*.test.js",
     "test:coverage": "node --test --experimental-test-coverage tests/*.test.js",
-    "lint": "eslint tests/*.js scripts/*.js",
-    "lint:fix": "eslint --fix tests/*.js scripts/*.js",
-    "format": "prettier --write tests/*.js scripts/*.js",
+    "lint": "eslint tests/*.js",
+    "lint:fix": "eslint --fix tests/*.js",
+    "format": "prettier --write tests/*.js",
     "typecheck": "tsc --noEmit"
   },
   "keywords": [
